Fix footer alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,6 +26,7 @@ h3 {
 .footer {
   font-size: 11px;
   background-color: dimgray;
+  text-align: left;
 }
 
 .white {
